Noticed Sticky footer clipping issue, tried to remedy, betting its a CSS issue, will fully resolve later

--- a/module-1_assessment/assets/css/style.css
+++ b/module-1_assessment/assets/css/style.css
@@ -1,9 +1,11 @@
 /*Sticky Footer CSS*/
 .footer {
-    position: absolute;
+    position: fixed;
+    clear: both;
     bottom: 0;
     width: 100%;
-    height: 60px; /* Set the fixed height of the footer here */
-    line-height: 60px; /* Vertically center the text there */
+    height: 20px; /* Set the fixed height of the footer here */
+    line-height: 20px; /* Vertically center the text there */
+    margin-top: 10px;
     background-color: #f5f5f5;
   }
